@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 11,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
